app-of-apps/zeta/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zeta-web
  namespace: zeta
  labels:
    app: zeta-web
spec:
  selector:
    app: zeta-web
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  type: ClusterIP
